--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server-express": "^3.6.3",
+    "axios": "^0.26.1",
     "bcrypt": "^5.0.0",
     "express": "^4.17.1",
     "graphql": "^15.5.0",
