--- a/package.json
+++ b/package.json
@@ -9,9 +9,17 @@
     "install": "cd server && npm i && cd ../client && npm i",
     "seed": "cd server && npm run seed"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/VladimirStarchenko/BookByBook.git"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/VladimirStarchenko/BookByBook/issues"
+  },
+  "homepage": "https://github.com/VladimirStarchenko/BookByBook#readme",
   "devDependencies": {
     "concurrently": "^7.0.0"
   }
